--- a/code/templates/aboutus.html
+++ b/code/templates/aboutus.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <!-- Required meta tags -->
@@ -128,10 +128,12 @@
                 </div>
 
                 <div class="banner-content-wrapper">
-                    <h1 class="banner-title wow fadeInUp">About Us</h1>
-                    <p class="banner-description wow fadeInUp" data-wow-delay="0.3s">
-                        QUEENs NEVER CRY is a purpose-driven company consisting of 5 queens, dedicated to empowering vulnerable women through our innovative digital platform.
-                    </p>
+                    <h1 class="banner-title wow fadeInUp">About QUEENs NEVER CRY</h1>
+                    <br class="banner-description wow fadeInUp" data-wow-delay="0.3s">
+                        Hi! Here's QUEENs NEVER CRY. We are a purpose-driven company consisting of 5 queens, dedicated to empowering vulnerable women through our innovative digital platform.<br>
+                    The main purpose of setting this website is to gather every resource together, so every girl can find everything they are looking for, and always find somebody back them up no matter how crazy the decision looks.<br>
+                    Just like a 911 hotline just for girls, here will always stand some officials or other girls willing to give you a hand. <br>
+                    Whenever, wherever.
 <!--                    <div class="banner-search-form-wrapper wow fadeInUp" data-wow-delay="0.5s">-->
 <!--                        <form action="" class="banner-search-form">-->
 <!--                            <input type="text" placeholder="Search or ask a question..">-->
@@ -443,8 +445,7 @@
 
                 <div class="section_title text-center">
                     <h2 class="h_title wow fadeInUp">
-                        Over 1200+<br>
-                        completed work & Still counting.
+                        Your MOST RELIABLE partner
                     </h2>
                 </div>
 
