--- a/code/static/assets/elagent-icon/style.css
+++ b/code/static/assets/elagent-icon/style.css
@@ -1240,3 +1240,139 @@ text-shadow: none;
 
 .ml1 .line1 { top: 0; }
 .ml1 .line2 { bottom: 0; }
+
+.about-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 20px auto;
+    width: 500px;
+    height: 250px;
+    background: white;
+    border-radius: 75px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    text-align: center;
+    padding: 10px;
+    transition: 1s box-shadow;
+  }
+
+  .about-card:hover {
+    box-shadow: 0 5px 35px 0px rgba(0, 0, 0, 0.1);
+  }
+
+  .about-card:hover::before,
+  .about-card:hover::after {
+    display: block;
+	  content: "";
+	  position: absolute;
+	  width: 500px;
+	  height: 250px;
+	  background: #fda8cf;
+	  border-radius: 75px;
+	  z-index: -1;
+	  animation: 1s about-counterclockwise infinite;
+  }
+
+  .about-card:hover::after {
+    background: #58cef1;
+  animation: about-clockwise 1s infinite;
+  }
+
+  @keyframes about-clockwise {
+    0% {
+    top: -5px;
+    left: 0;
+  }
+
+  12% {
+    top: -2px;
+    left: 2px;
+  }
+
+  25% {
+    top: 0;
+    left: 5px;
+  }
+
+  37% {
+    top: 2px;
+    left: 2px;
+  }
+
+  50% {
+    top: 5px;
+    left: 0;
+  }
+
+  62% {
+    top: 2px;
+    left: -2px;
+  }
+
+  75% {
+    top: 0;
+    left: -5px;
+  }
+
+  87% {
+    top: -2px;
+    left: -2px;
+  }
+
+  100% {
+    top: -5px;
+    left: 0;
+  }
+  }
+
+  @keyframes about-counterclockwise {
+    0% {
+    top: -5px;
+    right: 0;
+  }
+
+  12% {
+    top: -2px;
+    right: 2px;
+  }
+
+  25% {
+    top: 0;
+    right: 5px;
+  }
+
+  37% {
+    top: 2px;
+    right: 2px;
+  }
+
+  50% {
+    top: 5px;
+    right: 0;
+  }
+
+  62% {
+    top: 2px;
+    right: -2px;
+  }
+
+  75% {
+    top: 0;
+    right: -5px;
+  }
+
+  87% {
+    top: -2px;
+    right: -2px;
+  }
+
+  100% {
+    top: -5px;
+    right: 0;
+  }
+  }
