--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -26,7 +26,7 @@
                     <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
+            <h2 class="head">Who run the world? Girls!</h2>
             <p></p>
         </div>
     </div>
@@ -83,10 +83,10 @@
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu dropdown_menu_two">
                                 <li class="nav-item">
-                                    <a href="contact.html" class="nav-link">
+                                    <a href="/contact-us" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>Content Us</h5>
+                                            <h5>Contact Us</h5>
                                             <p>Send your feedback here!</p>
                                         </div>
                                     </a>
