--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -81,10 +81,10 @@
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu dropdown_menu_two">
                                 <li class="nav-item">
-                                    <a href="contact.html" class="nav-link">
+                                    <a href="/contact-us" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>Content Us</h5>
+                                            <h5>Contact Us</h5>
                                             <p>Send your feedback here!</p>
                                         </div>
                                     </a>
@@ -475,11 +475,11 @@
                         <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
                             <h3 class="f_title">HerBlossom Pages</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="signin.html">Sign In</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="forums.html">Forum</a></li>
-                                <li><a href="#">Job Recommendation</a></li>
+                                <li><a href="/index">Home</a></li>
+                                <li><a href="/signin">Sign In</a></li>
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/forum">Forum</a></li>
+                                <li><a href="/job-recommendation">Job Recommendation</a></li>
 
 <!--                                <li><a href="changelog.html">Changelog</a></li>-->
 <!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
@@ -496,7 +496,6 @@
                                 <li><a href="life-skills.html">Life Skills</a></li>
                                 <li><a href="physical-health.html">Physical Health</a></li>
                                 <li><a href="mental-health.html">Mental Health</a></li>
-                                <li><a href="tab.html">Tables</a></li>
 <!--                                <li><a href="#">Image Lightbox</a></li>-->
 <!--                                <li><a href="#">iOS & Android</a></li>-->
 <!--                                <li><a href="#">Messages</a></li>-->
@@ -508,8 +507,8 @@
                         <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
                             <h3 class="f_title">Company</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="Aboutus.html">About Us</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="/about-us">About Us</a></li>
+                                <li><a href="/contact-us">Contact Us</a></li>
 
 <!--                                <li><a href="#">Careers</a></li>-->
 <!--                                <li><a href="#">HerBlossom for Good</a></li>-->
@@ -524,7 +523,7 @@
         </div>
         <div class="footer_bottom text-center">
             <div class="container">
-                <p>© 2025 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
+                <p>© 2025 All Rights Reserved by <a href="/index">HerBlossom</a></p>
             </div>
         </div>
     </footer>
