--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -29,8 +29,8 @@
                 <h4><span>Her</span>Blossom</h4>
             </div>
         </div>
-        <h2 class="head">Welcome Girls! </h2>
-        <p></p>
+        <h2 class="head">We will accept every feedback </h2>
+        <p>Thank you! You will get reply within 72 hours.</p>
     </div>
 </div>
 <div class="body_wrapper">
@@ -82,7 +82,6 @@
                             <ul class="dropdown-menu dropdown_menu_two">
                                 <li class="nav-item">
                                     <a href="/contact-us" class="nav-link">
-                                        <img src="../static/img/tick.png" alt="">
                                         <div class="text">
                                             <h5>Contact Us</h5>
                                             <p>Send your feedback here!</p>
