--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -140,7 +140,9 @@
                 </div>
             </div>
         </section>
-        <section class="blog_top_post_area sec_pad bg_color">
+        <section class="blog_top_post_area sec_pad bg_color position-relative">
+            <!-- 顶部装饰图 -->
+            <img src="../static/img/svg1.png" alt="" class="section-top-decor">
             <div class="container">
                 <div class="row blog_top_post">
                     {% if featured_blog %}
@@ -198,6 +200,7 @@
                     {% endif %}
                 </div>
             </div>
+        <img src="../static/img/svg.png" alt="" class="section-bottom-decor">
         </section>
         <section class="doc_blog_grid_area">
             <div class="blog_grid_inner bg_color">
