--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -184,13 +184,14 @@
 <!--            </div>-->
 
 
-
-                <div class="card">
-                    <a class="index-jump-aboutus" href="/about-us">About Us <i class="arrow_right"></i></a>
-                    <p class="index-little-white" data-wow-delay="0.2s">Click to learn more about us.</p>
+            <a href="/about-us" class="about-card-link">
+                <div class="about-card">
+                    <h3 style="font-size: 40px">About Us <i class="arrow_right"></i></h3>
+                    <p>Click to learn more about us.</p>
                 </div>
+            </a>
 
-<!--                <h2>Looking for information?</h2>-->
+            <!--                <h2>Looking for information?</h2>-->
 <!--                <p>HerBlossom is a well-stocked website for female.</p>-->
 <!--                <form action="#" class="banner_search_form">-->
 <!--                    <input type="search" class="form-control" placeholder="Search the Knowledge Base">-->
