--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -26,7 +26,7 @@
             <div class="spinner"></div>
             <div class="text">
                 <img src="../static/img/spinner_logo.png" alt="">
-                <h4><span>Her</span>Blossom</h4>
+                <h4 style="font-size: 35px"><span>Her</span>Blossom</h4>
             </div>
         </div>
         <h2 class="head">Welcome Girls! </h2>
@@ -121,7 +121,7 @@
                 <p style="font-style: italic">Explore from here!</p>
 
             </div>
-            <div class="carousel-container" style="margin-top: 30px;">
+            <div class="carousel-container" style="margin-top: 20px;">
                 <div class="carousel-slide">
                     <div class="carousel-item">
                         <a href="#">
